--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 
 <body>
@@ -30,28 +31,3 @@
 </body>
 
 </html>
-
-body {
-  font-family: Arial, comic-sans;
-}
-
-#video-container {
-  float: left;
-  margin-right: 20px;
-}
-
-#message-container {
-  width: 50%;
-  float: left;
-}
-
-#message-form {
-  margin-bottom: 10px;
-}
-
-#messages-container {
-  border: 1px solid #ccc;
-  padding: 10px;
-  height: 300px;
-  overflow-y: scroll;
-}
